# hamsql

./: .gitignore  .gitlab-ci.yml  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  AUTHORS  CHANGELOG  Documentation.hs  HamSql  HamSql.hs  Load.hs  Main.hs  Makefile  Network  Options.hs  PHP.hs  Parser.hs  PostgresCon.hs  README.md  SQL.hs  TODO  Utils.hs  YamSql  cabal.config  dev-run-tests.bash  dev-setup.bash  doc-template.dot  doc-template.html  doc-template.rst  hamsql-tests.hs  hamsql.cabal  stack.yaml
app/: hamsql.hs
bash_completion.d/: hamsql
data/: doc-template.rst
docs/: Makefile  conf.py  index.rst  pitfalls.rst
src/: Documentation.hs  Hamsql.hs  Load.hs  Main.hs  Network  Option.hs  Options.hs  Parser.hs  PostgresCon.hs  SQL.hs  Sql.hs  Utils.hs
src/Database/: HamSql.hs  YamSql.hs
src/Database/HamSql/: Cli.hs  Setup.hs  SqlStatement.hs  SqlStmt.hs  Write.hs
src/Database/HamSql/Internal/: DbUtils.hs  Documentation.hs  InquireDeployed.hs  Load.hs  Option.hs  PostgresCon.hs  Sql.hs  Stmt.hs  Utils.hs
src/Database/HamSql/Internal/Stmt/: Basic.hs  Commons.hs  Create.hs  CreateSequence.hs  CreateTable.hs  Database.hs  Domain.hs  Drop.hs  Function.hs  Role.hs  Schema.hs  Sequence.hs  Table.hs  Trigger.hs  Type.hs
src/Database/YamSql/: Parser.hs
src/Database/YamSql/Internal/: Basic.hs  Check.hs  Commons.hs  Domain.hs  Function.hs  Module.hs  Role.hs  Schema.hs  Sequence.hs  SqlId.hs  Table.hs  Trigger.hs  Type.hs  Utils.hs
src/Parser/: Basic.hs  Check.hs  Commons.hs  Domain.hs  Function.hs  Module.hs  Role.hs  Sequence.hs  Table  Table.hs  Trigger.hs  Type.hs
src/Sql/Statement/: Commons.hs  Create.hs  CreateSequence.hs  CreateTable.hs  Drop.hs
src/Sql/Statements/: Create.hs
test/: hamsql-tests.hs  test_domain.py  test_other.py  test_table.py  utils.py
test/setups/: domain-upgrade.yml  domain.yml  function.yml  invalid.yml  manual-install.bash  mass.py  nothing.yml  self-test-empty.yml  self-test-stmt.yml  self-test.yml
test/setups/domain-dependency/: schema.yml
test/setups/domain-install/: schema.yml
test/setups/domain-install/domains.d/: D1.yml
test/setups/function-many/functions.d/: f1.sql  f100.sql  f1000.sql  f1006.sql  f1007.sql  f1009.sql  f101.sql  f1010.sql  f1012.sql  f1014.sql  f1015.sql  f1019.sql  f1020.sql  f1024.sql  f1025.sql  f103.sql  f1031.sql  f1034.sql  f1038.sql  f1040.sql  f1043.sql  f1044.sql  f1045.sql  f1046.sql  f1053.sql  f1055.sql  f1056.sql  f1057.sql  f1058.sql  f1062.sql  f1064.sql  f1066.sql  f1075.sql  f1076.sql  f1077.sql  f1080.sql  f1082.sql  f1085.sql  f1086.sql  f1087.sql  (+837 more)
test/setups/invalid/: schema.yml
test/setups/public/: schema.yml
test/setups/public/functions.d/: x
test/setups/self-test/: schema.yml
test/setups/self-test-stmt/: schema.yml
test/setups/self-test-stmt/tables.d/: A_serial.yml
test/setups/self-test/domains.d/: t_mydomain.yml  t_mydomain2.yml
test/setups/self-test/functions.d/: f-1.sql  f-4.sql  returns-table.sql  simple_table_returned.sql  sreturns-table-1col.sql  trig.sql
test/setups/self-test/sequences.d/: Seq1.yml  seq2.yml
test/setups/self-test/tables.d/: X.yml  simple.yml  y.yml  zX.yml
test/setups/self-test/types.d/: t_plant.yml  t_xtype.yml
test/setups/table-install/: schema.yml
tests/: Makefile  conftest.py  domain-upgrade.yml  domain.py  domain.yml  function-upgrade.yml  function.py  function.yml  hamsql-tests.tix  run.bash  table.py  table.yml  test_domain.py  test_function.py  test_role.py  test_table.py  utils.py
tests/domain-dependency/: schema.yml
tests/domain-install/: module.yaml  schema.yml
tests/domain-install-upgrade/domains.d/: D2.yml
tests/domain-install/domains.d/: not-loaded.yml-
tests/function-install/: module.yaml
tests/function-install/functions.d/: f1.sql
tests/public/: schema.yml
tests/setups/: domain-upgrade.yml  function-upgrade.yml  manual-install.bash  manual-upgrade.bash  many.yml  role.yml  run-manual.bash  table.yml
tests/setups/domain-install/: schema.yml
tests/setups/domain-install-upgrade/: schema.yml
tests/setups/domain-install/domains.d/: D1.yml
tests/setups/function-install-upgrade/: schema.yml
tests/setups/function-install/functions.d/: f2.py
tests/setups/function-many/: schema.yml
tests/setups/function-many/functions.d/: f10.sql  f1001.sql  f1002.sql  f1003.sql  f1004.sql  f1005.sql  f1008.sql  f1011.sql  f1013.sql  f1016.sql  f1017.sql  f1018.sql  f102.sql  f1021.sql  f1022.sql  f1023.sql  f1026.sql  f1027.sql  f1028.sql  f1029.sql  f1030.sql  f1032.sql  f1033.sql  f1035.sql  f1036.sql  f1037.sql  f1039.sql  f104.sql  f1041.sql  f1042.sql  f1047.sql  f1048.sql  f1049.sql  f105.sql  f1050.sql  f1051.sql  f1052.sql  f1054.sql  f1059.sql  f106.sql  (+1082 more)
tests/setups/public/functions.d/: x
tests/setups/role/: schema.yml
tests/setups/table-install/: schema.yml
tests/table-install/triggers.d/: tr.sql
