name:                hamsql
version:             0.7.0.0
synopsis:            HamSql
description:         Interpreter for SQL-structure definitions in Yaml (YamSql)
homepage:            https://git.hemio.de/hemio/hamsql
bug-reports:         https://git.hemio.de/hemio/hamsql/issues
license:             GPL-3
license-file:        COPYING
author:              Michael Herold et al.
maintainer:          quabla@hemio.de
copyright:           Michael Herold et al.
build-type:          Simple
extra-source-files:  AUTHORS, CHANGELOG, README.md, data/*
cabal-version:       >=1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    
  other-extensions: 
    DeriveDataTypeable,
    DeriveGeneric,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    ScopedTypeVariables,
    StandaloneDeriving,
    TemplateHaskell
  exposed-modules:
    Database.HamSql
    Database.HamSql.Cli
    Database.HamSql.Setup
    Database.YamSql
    Database.YamSql.Parser

  other-modules:
    Database.HamSql.Internal.DbUtils
    Database.HamSql.Internal.Documentation
    Database.HamSql.Internal.InquireDeployed
    Database.HamSql.Internal.Load
    Database.HamSql.Internal.Option
    Database.HamSql.Internal.PostgresCon
    Database.HamSql.Internal.Stmt.Basic
    Database.HamSql.Internal.Stmt.Commons
    Database.HamSql.Internal.Stmt.Create
    Database.HamSql.Internal.Stmt.Domain
    Database.HamSql.Internal.Stmt.Drop
    Database.HamSql.Internal.Stmt.Function
    Database.HamSql.Internal.Stmt
    Database.HamSql.Internal.Stmt.Role
    Database.HamSql.Internal.Stmt.Schema
    Database.HamSql.Internal.Stmt.Sequence
    Database.HamSql.Internal.Stmt.Table
    Database.HamSql.Internal.Stmt.Trigger
    Database.HamSql.Internal.Stmt.Type
    Database.HamSql.Internal.Utils
    Database.YamSql.Internal.Basic
    Database.YamSql.Internal.Check
    Database.YamSql.Internal.Commons
    Database.YamSql.Internal.Domain
    Database.YamSql.Internal.Function
    Database.YamSql.Internal.Role
    Database.YamSql.Internal.Schema
    Database.YamSql.Internal.Sequence
    Database.YamSql.Internal.SqlId
    Database.YamSql.Internal.Table
    Database.YamSql.Internal.Trigger
    Database.YamSql.Internal.Type

  build-depends:
    base >=4.8,
    text >=1.2 && <1.3,
    network-uri >=2.6 && <2.7,
    optparse-applicative >=0.13 && <0.14,
    bytestring >=0.10 && <0.11,
    postgresql-simple >=0.4 && <0.6,
    file-embed >=0.0 && <0.1,
    filepath >=1.4 && <1.5,
    pandoc >=1.17 && <1.18,
    frontmatter >=0.1 && <0.2,
    yaml >=0.8 && <0.9,
    directory >=1.2 && <1.3,
    aeson >=1.0 && <1.1,
    unordered-containers >=0.2 && <0.3,
    semigroups >=0.18 && < 0.19,
    groom >=0.1 && < 0.2

executable hamsql
  main-is: hamsql.hs
  default-language: Haskell2010
  
  build-depends:
    base >=4.8,
    hamsql

test-suite hamsql-tests
  default-language:    Haskell2010
  type:       exitcode-stdio-1.0
  main-is:    hamsql-tests.hs
  build-depends: base, hamsql

source-repository head
  type:     git
  location: git@git.hemio.de:hemio/hamsql.git

