name:                hamsql
version:             0.10.0.0
synopsis:            Interpreter for SQL-structure definitions in YAML (YamSql)
category:            Database
description:         Interpreter for SQL-structure definitions in YAML (YamSql)
homepage:            https://git.hemio.de/hemio/hamsql
bug-reports:         https://git.hemio.de/hemio/hamsql/issues
license:             GPL-3
license-file:        COPYING
author:              Sophie Herold <sophie@hemio.de>
maintainer:          Sophie Herold <sophie@hemio.de>
copyright:           (c) 2014-2017 Sophie Herold et al.
stability:           experimental
build-type:          Simple
cabal-version:       >=1.20
extra-source-files:
  AUTHORS,
  CHANGELOG,
  README.md,
  data/doc-template.rst

source-repository head
  type:     git
  location: git@git.hemio.de:hemio/hamsql.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    DeriveAnyClass,
    DeriveDataTypeable,
    DeriveGeneric,
    FlexibleContexts,
    FlexibleInstances,
    OverloadedStrings,
    QuasiQuotes
    
  other-extensions: 
    GADTs,
    ScopedTypeVariables,
    StandaloneDeriving,
    TemplateHaskell

  exposed-modules:
    Database.HamSql
    Database.HamSql.Cli
    Database.HamSql.Internal.DbUtils
    Database.HamSql.Internal.Documentation
    Database.HamSql.Internal.InquireDeployed
    Database.HamSql.Internal.Load
    Database.HamSql.Internal.Option
    Database.HamSql.Internal.PostgresCon
    Database.HamSql.Internal.Stmt
    Database.HamSql.Internal.Utils
    Database.HamSql.Setup
    Database.HamSql.Write
    Database.YamSql
    Database.YamSql.Internal.Basic
    Database.YamSql.Internal.Commons
    Database.YamSql.Internal.SqlId
    Database.YamSql.Internal.Utils
    Database.YamSql.Parser

  other-modules:
    Database.HamSql.Internal.Stmt.Basic
    Database.HamSql.Internal.Stmt.Commons
    Database.HamSql.Internal.Stmt.Create
    Database.HamSql.Internal.Stmt.Database
    Database.HamSql.Internal.Stmt.Domain
    Database.HamSql.Internal.Stmt.Function
    Database.HamSql.Internal.Stmt.Role
    Database.HamSql.Internal.Stmt.Schema
    Database.HamSql.Internal.Stmt.Sequence
    Database.HamSql.Internal.Stmt.Table
    Database.HamSql.Internal.Stmt.Trigger
    Database.HamSql.Internal.Stmt.Type
    Database.YamSql.Internal.Obj.Check
    Database.YamSql.Internal.Obj.Domain
    Database.YamSql.Internal.Obj.Function
    Database.YamSql.Internal.Obj.Role
    Database.YamSql.Internal.Obj.Schema
    Database.YamSql.Internal.Obj.Sequence
    Database.YamSql.Internal.Obj.Table
    Database.YamSql.Internal.Obj.Trigger
    Database.YamSql.Internal.Obj.Type
    Paths_hamsql

  build-depends:
    aeson == 1.2.*,
    base >=4.8 && <5.0,
    bytestring == 0.10.*,
    containers == 0.5.*,
    directory == 1.3.*,
    directory-tree == 0.12.1.*,
    doctemplates == 0.2.*,
    edit-distance == 0.2.*,
    file-embed == 0.0.*,
    filepath == 1.4.*,
    frontmatter == 0.1.*,
    network-uri == 2.6.*,
    optparse-applicative == 0.14.*,
    postgresql-simple >=0.4 && <0.6,
    pretty-simple == 2.0.*,
    text == 1.2.*,
    transformers == 0.5.*,
    unordered-containers == 0.2.*,
    yaml >= 0.8.24 && <0.9

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wno-orphans

executable hamsql
  main-is: app/hamsql.hs
  default-language: Haskell2010
  
  build-depends:
    base >=4.8 && <5.0,
    hamsql

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates

test-suite hamsql-tests
  default-language:    Haskell2010
  type:       exitcode-stdio-1.0
  main-is:    test/hamsql-tests.hs
  hs-source-dirs: . test
  default-extensions:
    OverloadedStrings
  build-depends:
    base >=4.8 && <5.0,
    hamsql,
    directory,
    safe-exceptions,
    postgresql-simple,
    transformers,
    yaml,
    bytestring,
    pretty-simple,
    text,
    -- test
    tasty,
    tasty-hunit,
    -- dev
    hindent
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates

